Fixed formatting in README.md

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -108,4 +108,5 @@
                                                                         </label>
                                                                     </subviews>
                                                                 </stackView>
-                                         
+                                                            </subviews>
+                                        
