--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -109,4 +109,5 @@
                                                                     </subviews>
                                                                 </stackView>
                                                             </subviews>
-                                        
+                                                        </stackView>
+                                                    </subviews>
