--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -111,3 +111,5 @@
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
+                                                </stackView>
+              
