--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -113,4 +113,5 @@
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
-                
+                                            <constraints>
+                               
