Test of creating collections via API wrapper

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -114,4 +114,4 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                               
+                                                <constraint firstItem="9ZJ-JL-cye" firstAttribute="leading
