Remove deprecated functions

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -114,4 +114,4 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="9ZJ-JL-cye" firstAttribute="leading
+                                                <constraint firstItem="9ZJ-JL-cye" firstAttribute="leading" secondItem="Lff-3P-n6s" secondAttribute="leadingMargin" constant="4" id="Tc3-5o-Ehb"/>
