--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -115,4 +115,4 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="9ZJ-JL-cye" firstAttribute="leading" secondItem="Lff-3P-n6s" secondAttribute="leadingMargin" constant="4" id="Tc3-5o-Ehb"/>
-                                                <constraint firstAttribute="trai
+                                                <constraint firstAttribute="trailingMargin" secondItem="9ZJ-JL-cye" secondAttribute="trailing" constant="4" id="lu2
