Added build scripts

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -116,4 +116,4 @@
                                             <constraints>
                                                 <constraint firstItem="9ZJ-JL-cye" firstAttribute="leading" secondItem="Lff-3P-n6s" secondAttribute="leadingMargin" constant="4" id="Tc3-5o-Ehb"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="9ZJ-JL-cye" secondAttribute="trailing" constant="4" id="lu2-4t-aQD"/>
-                                                <constraint firstAt
+                                                <constraint firstAttribute="bottomMargin" secondItem="9ZJ-JL-cye" secondAttribute="bottom" id="uvH-2Y-JZ
