--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -118,4 +118,5 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="9ZJ-JL-cye" secondAttribute="trailing" constant="4" id="lu2-4t-aQD"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="9ZJ-JL-cye" secondAttribute="bottom" id="uvH-2Y-JZw"/>
                                             </constraints>
-          
+                                        </tableViewCellContentView>
+                                   
