--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -136,4 +136,5 @@
                                 </connections>
                             </button>
                             <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sL0-eH-k7s" userLabel="New Stock Symbol Popup">
-                                <rect key="frame" x="72.5" y="186.5" wi
+                                <rect key="frame" x="72.5" y="186.5" width="230" height="230"/>
+                                <subviews>
