Brian: restaurant update (Friday Apr 14)

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -140,4 +140,5 @@
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Nze-hj-YwO">
                                         <rect key="frame" x="30" y="24" width="170" height="70"/>
-                                        <
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEn
