--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -144,4 +144,4 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Stock Symbol" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N50-OA-YFX">
                                                 <rect key="frame" x="3" y="0.0" width="164" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                      
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColo
