--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -151,4 +151,4 @@
                                                 <rect key="frame" x="0.0" y="40" width="170" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            
+                                                <textInputTraits key="textInputTraits" autocorrecti
