--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -155,4 +155,5 @@
                                             </textField>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="QUg-rb-MyI" secondAttribute=
+                                            <constraint firstAttribute="trailing" secondItem="QUg-rb-MyI" secondAttribute="trailing" id="PPX-GC-ugT"/>
+                                            <c
