--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -156,4 +156,6 @@
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="QUg-rb-MyI" secondAttribute="trailing" id="PPX-GC-ugT"/>
-                                            <constraint firstItem="QUg-rb-MyI" firstAttribute="leading" secondItem="Nze-hj-YwO" secondA
+                                            <constraint firstItem="QUg-rb-MyI" firstAttribute="leading" secondItem="Nze-hj-YwO" secondAttribute="leading" id="Z0q-HO-jGf"/>
+                                        </constraints>
+ 
