--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -158,4 +158,5 @@
                                             <constraint firstAttribute="trailing" secondItem="QUg-rb-MyI" secondAttribute="trailing" id="PPX-GC-ugT"/>
                                             <constraint firstItem="QUg-rb-MyI" firstAttribute="leading" secondItem="Nze-hj-YwO" secondAttribute="leading" id="Z0q-HO-jGf"/>
                                         </constraints>
- 
+                                    </stackView>
+                             
