--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -160,4 +160,5 @@
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" highlighted="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8qH-Qi-JHC">
-                                        <rect key="frame" x="72" y="148" width="86" hei
+                                        <rect key="frame" x="72" y="148" width="86" height="34"/>
+                                        <color key="backgroundColor" white
