mm/fork: fix overflow in vma length when copying mmap on clone

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -163,4 +163,4 @@
                                         <rect key="frame" x="72" y="148" width="86" height="34"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                 
+                                            <constraint firstAttribute="width" relation="great
