--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -166,4 +166,5 @@
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="86" id="tj9-Ah-3wq"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
-             
+                                        <state key="normal" title="ok">
+                         
