--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -171,4 +171,5 @@
                                         </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                            <userDefinedRuntimeAttribute type="n
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                             
