--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -177,4 +177,6 @@
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="addStockTracker:" destination="LCn-cc-Sap" eventType="touchUpInside" id="X2Y-80-p6z"/>
-                                    
+                                        </connections>
+                                    </button>
+                    
