Fixed a minor typo

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -180,4 +180,4 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor
+                                <color key="backgroundColor" red="0.22352941176470587" green="0.21176470588235294" blue="0.2
