--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -181,4 +181,5 @@
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.22352941176470587" green="0.21176470588235294" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
-            
+                                <constraints>
+                                    <constrain
