--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -182,4 +182,4 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.22352941176470587" green="0.21176470588235294" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constrain
+                                    <constraint firstItem="Nze-hj-YwO" firstAttribute="leading" secondItem="sL0-eH-k7s" secondA
