--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -183,4 +183,5 @@
                                 <color key="backgroundColor" red="0.22352941176470587" green="0.21176470588235294" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="Nze-hj-YwO" firstAttribute="leading" secondItem="sL0-eH-k7s" secondAttribute="leading" constant="30" id="AsB-Dq-jK3"/>
-                                    <constraint firstItem="Nze-hj-YwO" firstAttribute="centerX" secondItem="sL0-eH-k7
+                                    <constraint firstItem="Nze-hj-YwO" firstAttribute="centerX" secondItem="sL0-eH-k7s" secondAttribute="centerX" id="MWN-t7-uvh"/>
+                               
