--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -186,4 +186,5 @@
                                     <constraint firstItem="Nze-hj-YwO" firstAttribute="centerX" secondItem="sL0-eH-k7s" secondAttribute="centerX" id="MWN-t7-uvh"/>
                                     <constraint firstAttribute="width" constant="230" id="PCm-6Q-0UA"/>
                                     <constraint firstAttribute="trailing" secondItem="Nze-hj-YwO" secondAttribute="trailing" constant="30" id="YkE-Br-RcV"/>
-                                    <constraint firstAttribute="bottom" secondItem="8qH-Qi-JHC" secondAttribute=
+                                    <constraint firstAttribute="bottom" secondItem="8qH-Qi-JHC" secondAttribute="bottom" constant="48" id="a2g-V9-V9B"/>
+                                    <constraint first
