--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -192,4 +192,4 @@
                                     <constraint firstItem="8qH-Qi-JHC" firstAttribute="centerX" secondItem="sL0-eH-k7s" secondAttribute="centerX" id="o0G-gt-7zV"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
-        
+                                    <userDefinedRuntimeAttribute type="number" keyPat
